--- a/LvTao/AndroidManifest.xml
+++ b/LvTao/AndroidManifest.xml
@@ -13,6 +13,9 @@
         </activity>
         <activity android:name=".activity.CommodityDetailActivity"/>
         <activity android:name=".activity.MainActivity">
+
+        </activity>
+        <activity android:name=".activity.MyActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
